# trading-strategy-edge-study

./: .env.example  .gitignore  DISCLAIMER.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/thesis/: make_figures.py  thesis.md  thesis.tex
ops/sql/: 001_init.sql
src/trading_bot/: cli.py  config.py
src/trading_bot/backtest/: runner.py
src/trading_bot/data/: candles.py  ctrader_auth.py  ctrader_fetcher.py  ctrader_protocol.py  db.py  models.py  oanda_fetcher.py
src/trading_bot/execution/: base.py  ctrader_broker.py  instruments.py  oanda.py
src/trading_bot/observability/: logging.py
src/trading_bot/oms/: engine.py  paper.py  reconcile.py  reporting.py  store.py
src/trading_bot/risk/: limits.py  safety.py  sizing.py
src/trading_bot/strategies/: base.py  donchian.py  mean_reversion.py
tests/: test_backtest.py  test_config.py  test_ctrader_broker.py  test_ctrader_fetcher.py  test_ctrader_protocol.py  test_donchian.py  test_instruments.py  test_mean_reversion.py  test_oanda_fetcher.py  test_oms.py  test_paper.py  test_reconcile.py  test_reporting.py  test_risk.py  test_safety.py  test_sizing.py
