[project]
name = "trading-bot"
version = "0.1.0"
description = "FX/futures trading bot — technical rules-based strategies, custom Python build"
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "Masimba" }]

dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "ctrader-open-api>=0.9.2",
    "crochet>=2.1",  # sync facade over Twisted reactor (cTrader SDK is Twisted-based)
    "twisted>=24.3",  # explicit pin — cTrader SDK transitively depends on this
    "service-identity>=24.1",  # proper TLS hostname verification for Twisted
    "pandas>=2.2",
    "numpy>=1.26,<2.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
backtest = [
    "vectorbt>=0.27",
    "matplotlib>=3.8",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
tbot = "trading_bot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_bot"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20", "SIM", "RUF"]
# UP017 (datetime.UTC) and UP042 (StrEnum) conflict with this codebase's
# consistent house style: `timezone.utc` and `(str, Enum)` enums throughout.
ignore = ["E501", "UP017", "UP042"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
